force-app/main/default/objects/Quote_Document_Block__c/Quote_Document_Block__c.object-meta.xml
<CustomObject>
    <description
  >Standalone document content: introductions, notices, terms, clauses, signature instructions, headings between tables. Everything a real quote document contains that is not a table, a column heading or a row label. Intro Text and Footer Text on a table cannot model any of it without inventing an empty table to hang it from, which is why this object exists rather than being folded into the table. Ordered in one document-wide sequence with the tables, so a renderer walks a single ordered list and never decides what appears.</description>
    <label>Quote Document Block</label>
    <nameField>
        <displayFormat>QDB-{0000000000}</displayFormat>
        <label>Block Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Document Blocks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>