force-app/main/default/objects/Quote_Document_Block__c/fields/Approval_Identity__c.field-meta.xml
<CustomField>
    <fullName>Approval_Identity__c</fullName>
    <inlineHelpText>The approval, release, or governed-content identity proving this wording was approved for use.</inlineHelpText>
    <label>Approval Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>