force-app/main/default/objects/Quote_Document_Block__c/fields/Block_Code__c.field-meta.xml
<CustomField>
    <fullName>Block_Code__c</fullName>
    <inlineHelpText>Semantic key for this block, e.g. TERMS_STANDARD. Unique within a quote. A renderer keys styling and placement off the code, never off the wording, so the code stays stable when the text is reworded or translated.</inlineHelpText>
    <label>Block Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>