force-app/main/default/objects/Quote_Document_Block__c/fields/Block_Type__c.field-meta.xml
<CustomField>
    <fullName>Block_Type__c</fullName>
    <inlineHelpText>What kind of content this is, and therefore how a renderer styles it. This is where a renderer gets bold from - NOT from markup smuggled through the body. Heading: a section heading between tables. Paragraph: ordinary prose. Clause: versioned contractual text. Notice: something the reader must not miss.</inlineHelpText>
    <label>Block Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Heading</fullName><default>false</default><label>Heading</label></value>
            <value><fullName>Paragraph</fullName><default>false</default><label>Paragraph</label></value>
            <value><fullName>Clause</fullName><default>false</default><label>Clause</label></value>
            <value><fullName>Notice</fullName><default>false</default><label>Notice</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>