force-app/main/default/objects/Quote_Document_Block__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>The resolved, localized text. PLAIN TEXT ONLY - no HTML, no template tags, no merge-field syntax. A renderer that needs bold gets it from Block Type, not from markup smuggled through here. The check is by pattern, not by character, so ordinary prose using a less-than sign is accepted.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>