force-app/main/default/objects/Quote_Document_Block__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Position in the ONE document-wide sequence shared with Quote Document Table. A block at 150 prints between tables at 100 and 200. Unique across every block and table on the quote - a tie would leave the printed order to query order, so two renderers could legitimately disagree.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>