force-app/main/default/objects/Quote_Document_Block__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <inlineHelpText>Optional resolved, localized heading for this block. Legitimately blank for a bare paragraph or notice that needs no heading.</inlineHelpText>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>