force-app/main/default/objects/Quote_Document_Block__c/fields/Is_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Displayed__c</fullName>
    <inlineHelpText>FALSE means this block was generated but must not print. A hidden block is excluded from the payload AND from the payload hash, so hiding one genuinely changes the document rather than merely styling it away.</inlineHelpText>
    <label>Is Displayed</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>