force-app/main/default/objects/Quote_Document_Block__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <inlineHelpText>The locale this text was resolved for. Always matches the tables in the same snapshot - one locale per snapshot, so a document cannot end up half translated.</inlineHelpText>
    <label>Locale</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>