force-app/main/default/objects/Quote_Document_Block__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <inlineHelpText>The quote whose document this block belongs to.</inlineHelpText>
    <label>Quote</label>
    <deleteConstraint>Cascade</deleteConstraint>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Document Blocks</relationshipLabel>
    <relationshipName>Document_Blocks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>