force-app/main/default/objects/Quote_Document_Block__c/fields/Related_Row__c.field-meta.xml
<CustomField>
    <fullName>Related_Row__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>The generated commercial Row this wording belongs with. A Row-related Block must also identify its Related Table.</inlineHelpText>
    <label>Related Row</label>
    <referenceTo>Quote_Document_Row__c</referenceTo>
    <relationshipLabel>Related Document Blocks</relationshipLabel>
    <relationshipName>Related_Document_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>