force-app/main/default/objects/Quote_Document_Block__c/fields/Related_Table__c.field-meta.xml
<CustomField>
    <fullName>Related_Table__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>The generated Table this governed wording belongs with. Blank for document-level Blocks.</inlineHelpText>
    <label>Related Table</label>
    <referenceTo>Quote_Document_Table__c</referenceTo>
    <relationshipLabel>Related Document Blocks</relationshipLabel>
    <relationshipName>Related_Document_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>