force-app/main/default/objects/Quote_Document_Block__c/fields/Related_Table_Key__c.field-meta.xml
<CustomField>
    <fullName>Related_Table_Key__c</fullName>
    <description>Stable Table key used while a contributor builds a Block before Salesforce IDs exist.</description>
    <label>Related Table Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>