force-app/main/default/objects/Quote_Document_Block__c/fields/Source_Identity__c.field-meta.xml
<CustomField><fullName>Source_Identity__c</fullName><description>Stable identity of the approved content, Apex composer, or Flow composer that supplied this wording.</description><label>Source Identity</label><length>255</length><type>Text</type></CustomField>