force-app/main/default/objects/Quote_Document_Block__c/fields/Source_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_Version__c</fullName>
    <inlineHelpText>Which version of the source clause text this snapshot captured. Contractual text changes; a signed document must be able to say exactly which wording the customer agreed to, which the text alone cannot prove once the source has moved on.</inlineHelpText>
    <label>Source Version</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>